# RegimeEngine

./: .env.example  .gitignore  BUGS.md  CONTRIBUTING.md  MOSCOW.md  README.md  build_nuitka.sh  cli.py  eval_ppo.py  evaluate_ppo_policy.py  evaluation_results.json  gymnasium_shim.py  pyproject.toml  regime_config.yaml  regime_loader.py  requirements.txt  run_10k_audit.py  run_5k_audit.py  setup.py  smoke_test.py  test_env.py  train_ppo.py
.github/workflows/: bandit.yml
configs/: custom.yaml  moscow.yaml
docs/: AIRSTRIP_ONE.md  AIRSTRIP_ONE_SYSTEMS.md  ARCHITECTURE.md  GUI.md  MILITARY_SYSTEM.md  MOSCOW_SCENARIO.md  PHYSICS_INTEGRATION.md  PLUGIN_SYSTEM.md  STALINGRAD_SCENARIO.md  WAR_ECONOMY.md
extensions/: __init__.py
extensions/air_force/: __init__.py  air_combat.py  air_operations.py  air_state.py
extensions/audits/: __init__.py  system.py
extensions/economy_v2/: __init__.py  economy_core.py
extensions/exhaustion/: __init__.py  monitor.py
extensions/fog_of_war/: __init__.py  wrapper.py
extensions/governance/: __init__.py  budget_system.py
extensions/intelligence/: __init__.py  intel_system.py
extensions/military/: __init__.py  advanced_tactics.py  advanced_wrapper.py  cow_combat.py  land_bridge.py  military_dynamics.py  military_extensions.py  military_state.py  military_wrapper.py  physics.py  physics_bridge.py  political_interface.py  unit_types.py
extensions/ministries/: ministries.py
extensions/naval/: __init__.py  naval_combat.py  naval_invasion.py  naval_operations.py  naval_state.py
extensions/pop/: __init__.py  pop_dynamics.py  pop_params.py  pop_shock.py  pop_state.py  pop_v2.py  pop_wrapper.py
extensions/research/: __init__.py  research_system.py
extensions/resistance/: __init__.py  resistance.py
extensions/topology/: visualizer.py
extensions/war_economy/: __init__.py  manpower.py  war_economy_actions.py  war_economy_dynamics.py  war_economy_state.py
gravitas/: __init__.py  engine.py  llm_game.py  weather_bridge.py
gravitas/plugins/: __init__.py  axis_airlift.py  logistics_network.py  nonlinear_combat.py  partisan_warfare.py  soviet_reinforcements.py
gravitas/scenarios/: airstrip_one.yaml  moscow.yaml
gravitas_engine/: __init__.py  cli.py
gravitas_engine/agents/: gravitas_actions.py  gravitas_env.py  stalingrad_ma.py
gravitas_engine/analysis/: logging.py  (+1 more)
gui/: __init__.py  generate_map.py  main.py
regime_engine/: __init__.py  cli.py
tests/: benchmark_llm.py  benchmark_pop_optimization.py  eval_stalingrad_battle.py  evaluate_gravitas_multi_agent.py  evaluate_ppo_policy.py  replay_stalingrad_battle.py  run_10k_audit.py  simple_benchmark.py  smoke_test.py  test_advanced_military_extension.py  test_env.py  test_military_extension.py  test_naval_invasion.py  test_optimization_integration.py  test_standardized_system.py  test_trained_agent.py  test_unit_types.py  train_moscow_selfplay.py  train_rppo.py  train_stalingrad_selfplay.py
training/: __init__.py
(+61 files in other folders)
