[build-system]
requires = ["setuptools>=68", "wheel", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "gravitas-engine"
version = "0.1.0"
description = "Research-grade governance RL environment with partial observability, media bias, diplomacy, population dynamics, hierarchical actions, and non-linear dynamics."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["reinforcement-learning", "simulation", "governance", "multi-agent"]

dependencies = [
    "numpy>=1.24",
    "gymnasium>=0.29",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "stable-baselines3>=2.2",
    "sb3-contrib>=2.2",
    "torch>=2.0",
    "tqdm",
    "rich",
    "tensorboard>=2.12",
    "wandb>=0.15",
]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "networkx>=3.0",
    "hypothesis>=6.80",
]
viz = [
    "seaborn>=0.12",
    "matplotlib>=3.7",
]
gui = [
    "pygame-ce>=2.5",
]
all = [
    "gravitas-engine[train,dev,viz,gui]",
]

[project.scripts]
gravitas = "gravitas_engine.cli:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "extensions*"]

[tool.setuptools.package-data]
gravitas_engine = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "smoke_test.py"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
